Tue Dec 15 08:55:49 GMT 2009  Richard Boulton <richard@tartarus.org>

	* setup.py,xappy/__init__.py: Bump version to 0.6.0 - release won't
	  be for a little while yet, but this allows me to test the version
	  for backward compatibility.

Tue Dec 15 08:43:24 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/mset_search_results.py,xappy/searchconnection.py,
	  xappy/searchresults.py: Refactor facet calculation.  Scoring now
	  happens immediately, rather than when get_suggested_facets() is
	  called.  This requires adding a "facet_desired_num_of_categories"
	  parameter to SearchConnection.search().  I'm likely to remove
	  get_suggested_facets() entirely soon, since experience has shown
	  that the facet suggestion algorithm it uses isn't of much
	  practical use: it's probably better to just return all the valid
	  facets for now, and allow higher layers to choose them, until we
	  know a better algorithm.
	* docs/introduction.rst,xappy/doctests/searchconnection_doctest2.txt:
	  Update to expect range facets values in a tuple rather than a
	  list.

Mon Dec 14 18:44:00 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/mset_search_results.py,xappy/searchconnection.py: Pass the
	  field types through to the facet results directly, instead of the
	  kwargs from the action.

Mon Dec 14 13:58:19 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/unittests/query_id.py: Test query_id for correct
	  serialisation.

Mon Dec 14 13:54:51 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py: Fix argument serialisation for query
	  constructors which have no default arguments: fixes
	  evalable_repr() for queries created with query_id().

Mon Dec 14 13:47:26 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cache_search_results.py,xappy/searchconnection.py: Tie in
	  facets and stats from the cache.

Mon Dec 14 13:45:31 GMT 2009  Richard Boulton <richard@tartarus.org>
